# rocket-webservice-test-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  cloudbuild.yaml
src/: catchers.rs  config.rs  lib.rs  main.rs  models.rs  request.rs  response.rs  routes.rs
src/common/: catchers.rs  fairings.rs  logger.rs  mod.rs  responses.rs  utils.rs
src/fairing/: fairings.rs
src/handlers/: mod.rs  mutation.rs  query.rs
src/model/: mod.rs  models.rs  responses.rs
src/models/: id.rs  message.rs  mod.rs
src/repository/: db_services.rs  mod.rs
src/route/: catchers.rs  mod.rs  routes.rs
src/routes/: get.rs  mod.rs  post.rs  read_one.rs  write_one.rs
src/schemas/: id.rs  message.rs  mod.rs
src/utils/: log.rs  request.rs  response.rs
